@@ -28,6 +28,7 @@
         <javac.src.version>${maven.compiler.release}</javac.src.version>
         <javac.target.version>${maven.compiler.release}</javac.target.version>
 
+        <javafx.version>15</javafx.version>
         <junit.version>5.7.0</junit.version>
         <assertj.version>3.17.2</assertj.version>
              
@@ -38,6 +39,30 @@
     </properties>
 
     <dependencies>
+        <!-- Dependencies -->
+
+        <!-- JavaFX -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.airhacks</groupId>
+            <artifactId>afterburner.fx</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <!-- Test Dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -60,6 +85,15 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.fxml</include>
+                    <include>**/*.css</include>
+                </includes>
+            </resource>
+        </resources>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -74,6 +108,19 @@
                     <version>2.22.2</version>
                     <configuration>
                         <argLine>--enable-preview</argLine>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>0.0.4</version>
+                    <configuration>
+                        <jlinkImageName>hellofx</jlinkImageName>
+                        <launcher>launcher</launcher>
+                        <mainClass>jchess.gui.JChess</mainClass>
+                        <options>
+                            <option>--enable-preview</option>
+                        </options>
                     </configuration>
                 </plugin>
             </plugins>
